# LineBot

./: .env.example  .gitignore  README.md  linebot-onedir.spec  linebot-onefile.spec  linebot_clean_onefile.spec  pyproject.toml
docs/: LINE本地模型聊天機器人_開發計畫.md  LM_Studio_自動啟動.md  linebot_refactor_plan.md  修改.md  問題清單_待修復.md  安全與守則.md  專案優化實作.md  專案優化與清理建議.md  打包指南.md
scripts/: build.ps1  cleanup_runtime.py  export_metrics_report.py  health_report.py  ingest_knowledge.py  init_db.py  run_dev.ps1  run_eval.py
src/linebot_app/: __init__.py  __main__.py  agent_loop.py  app.py  bot.py  build_tools.py  cli.py  config.py  factcheck_prompts.py  policies_loader.py  tray_app.py
src/linebot_app/db/: __init__.py  schema.py  sqlite.py
src/linebot_app/models/: __init__.py  research.py  search.py
src/linebot_app/policies/: trusted_domains.txt
src/linebot_app/repositories/: __init__.py  knowledge_repository.py  llm_log_repository.py  message_repository.py  persona_repository.py  prompt_repository.py  session_memory_repository.py  session_repository.py  session_task_repository.py
src/linebot_app/services/: __init__.py  answer_composer_service.py  answer_policy.py  bot_service.py  canned_reply_service.py  chat_orchestrator.py  document_parser_service.py  external_llm_service.py  factcheck_service.py  grounded_reply_service.py  health_service.py  image_ocr_service.py  knowledge_answer_service.py  knowledge_first_service.py  llm_service.py  market_service.py  profile_memory_service.py  prompt_service.py  rag_service.py  research_planner_service.py  response_guard_service.py  session_service.py  source_scoring_service.py  task_memory_service.py  weather_service.py  web_research_service.py  web_search_service.py
tests/: test_agent_loop.py  test_answer_policy.py  test_app.py  test_bot.py  test_bot_service.py  test_chat_orchestrator.py  test_factcheck_service.py  test_llm_service.py  test_rag_service.py  test_research_planner_service.py  test_response_guard_service.py  test_weather_service.py  test_web_search_service.py
(+3 files in other folders)
