[project]
name = "linebot-app"
version = "0.1.0"
description = "LINE Bot project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "line-bot-sdk>=3.22.0",
    "python-dotenv>=1.2.2",
    "pystray>=0.19.5",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
linebot = "linebot_app:main"
build-onedir = "linebot_app.build_tools:build_onedir"
build-onefile = "linebot_app.build_tools:build_onefile"
init-db = "linebot_app.cli:init_db_main"
ingest-knowledge = "linebot_app.cli:ingest_knowledge_main"
health-report = "linebot_app.cli:health_report_main"
export-metrics-report = "linebot_app.cli:export_metrics_report_main"
cleanup-runtime = "linebot_app.cli:cleanup_runtime_main"
run-eval = "linebot_app.cli:run_eval_main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "pyinstaller>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
